--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,8 +5,8 @@ profile: 'pg'
 config-version: 2
 
 vars:
-  is_delta_load: False
-  batch_name: "NA"
+  is_delta_load: True
+  batch_name: "PC"
   delta_load_batch_id: -1
   delta_load_schema: cntrl
   completed_status: Completed # not used - result.status is "success" by default
@@ -15,8 +15,12 @@ vars:
   failed_status: Failed # not used - result.status is "error" by default
   error_status: error
 
-on-run-start: "{{ delta_load_master_control_start() }}"
-on-run-end: "{{ delta_load_master_control_complete() }}"
+on-run-start: "{{ mu_delta_load_master_control_start() }}"
+on-run-end: "{{ mu_delta_load_master_control_complete() }}"
+
+dispatch:
+  - macro_namespace: dbt
+    search_order: ['iag_delta_postgres_test', 'dbt']
 
 source-paths: ["models"]
 analysis-paths: ["analysis"]
@@ -35,3 +39,10 @@ models:
       materialized: table
       staging:
         materialized: view
+snapshots:
+  #on-run-start: "{{ insert_delta_load_master_control('PC') }}"
+  iag_delta_postgres_test:
+    orders:
+      +tags: PC
+    test:
+      +tags: test
